5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1836_1280.log
== TEST (2019-06-27 11:34:12) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = int(0)
ytab = int(0)

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
a= shape(tabuleiro)[1]-1
b= shape(tabuleiro)[0]-1
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab-1
		if (xtab<0):
			xtab=xtab+1
		if (tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
		  

    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		if(ytab<0):
			ytab=ytab+1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab+1
    # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab+1
		if(ytab>b):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda +1
        # Apaga moeda do tabuleiro
      tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 62
    tabuleiro[ytab,xtab] = 0
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:34:16) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = int(0)
ytab = int(0)

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
a= shape(tabuleiro)[1]-1
b= shape(tabuleiro)[0]-1
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab-1
		if (xtab<0):
			xtab=xtab+1
		if (tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
		  

    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		if(ytab<0):
			ytab=ytab+1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab+1
    # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab+1
		if(ytab>b):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda +1
        # Apaga moeda do tabuleiro
      tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 62
    tabuleiro[ytab,xtab] = 0
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:34:23) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = int(0)
ytab = int(0)

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
a= shape(tabuleiro)[1]-1
b= shape(tabuleiro)[0]-1
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab-1
		if (xtab<0):
			xtab=xtab+1
		if (tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
		  

    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		if(ytab<0):
			ytab=ytab+1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab+1
    # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab+1
		if(ytab>b):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda +1
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:35:03) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = int(0)
ytab = int(0)

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
a= shape(tabuleiro)[1]-1
b= shape(tabuleiro)[0]-1
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab-1
		if (xtab<0):
			xtab=xtab+1
		if (tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
		  

    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		if(ytab<0):
			ytab=ytab+1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab+1
    # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab+1
		if(ytab>b):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda +1
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- EXECUTION TIME:
1.04146
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
